# ascii-ansi-table

./: .gitignore  CHANGELOG.md  CODING_CONVENTIONS.md  Cargo.toml  LICENSE  README.md  serve.sh  stream.mov
.github/: DEPLOYMENT.md
.github/workflows/: build-and-deploy.yml
benches/: performance.rs
html/: ansi-demo.html  comprehensive-test.html  debug-ansi.html  emoji-width-test.html  index.html  streaming-demo.html  streaming-multiline-demo.html  test-suite-performance.js  test-suite-synchronized.js  test-utils.js
src/: alignment.rs  ansi.rs  ansi_multiline.rs  border.rs  builder.rs  cli.rs  column_arrays.rs  debug.rs  debug_test.rs  docs.rs  emoji.rs  headers.rs  html.rs  lib.rs  multiline.rs  newline.rs  padding.rs  performance.rs  renderer.rs  single_line.rs  spanned_renderer.rs  spanning.rs  streaming.rs  truncation.rs  unicode.rs  validation.rs  vertical_alignment.rs  vertical_multiline.rs  wasm.rs  wrapping.rs
src/bindings/: cli.rs  mod.rs  wasm.rs
src/core/: calculator.rs  mod.rs  processor.rs  renderer.rs  validator.rs
src/features/: alignment_processor.rs  borders.rs  mod.rs  spanning.rs  streaming.rs
src/types/: alignment.rs  borders.rs  config.rs  mod.rs
src/utils/: ansi.rs  formatting.rs  html.rs  mod.rs  unicode.rs  wrapping.rs
