[package]
name = "ascii_ansi_table"
version = "0.1.0-alpha.1"
edition = "2024"
description = "A fast table rendering library with ANSI support, Unicode awareness, and WASM compatibility (early development)"
license = "MIT"
authors = ["Your Name <alexgavrushenko@gmail.com>"]
repository = "https://github.com/alexgavrushenko/ascii-ansi-table"
homepage = "https://github.com/alexgavrushenko/ascii-ansi-table"
documentation = "https://docs.rs/ascii_ansi_table"
readme = "README.md"
keywords = ["table", "cli", "formatting", "ascii", "unicode"]
categories = ["command-line-utilities", "text-processing"]

# Early development warning
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
unicode-width = "0.1"
unicode-segmentation = "1.10"
regex = "1.10"
ansi_term = "0.12"
thiserror = "1.0"
textwrap = "0.16"

# CLI support
clap = { version = "4.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
wasm-bindgen-test = "0.3"
tempfile = "3.0"

[[bench]]
name = "performance"
harness = false

[features]
default = ["cli"]
cli = ["clap", "serde_json"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde-wasm-bindgen"]

# CLI binary
[[bin]]
name = "ascii_ansi_table"
path = "src/bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
panic = "abort"

[profile.release.build-override]
opt-level = 3